cabal-version: 2.2

name: beehive
version: 0

executable beehive
  main-is: Main.hs
  ghc-options: -Wall -threaded
  other-modules:
    Distribution
    Input
    Render
  build-depends:
      mitchell-stdlib
    , ncurses
  default-extensions:
    DeriveFunctor
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecursiveDo
    ScopedTypeVariables
  default-language: Haskell2010
